argocd/argocd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.homelab.bowmans.site`)
      kind: Rule
      services:
      - name: argocd-server
        port: 80
        scheme: https
  tls:
    secretName: argocd-certificate
