argocd/argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress-route
  annotations:
    gethomepage.dev/href: "https://argocd.bowmans.site/"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: ArgoCD
    gethomepage.dev/group: CICD
    gethomepage.dev/icon: argocd.png
    gethomepage.dev/app: argocd-server
    gethomepage.dev/name: ArgoCD
    gethomepage.dev/widget.type: "argocd"
    gethomepage.dev/widget.url: "https://argocd.bowmans.site/"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=argocd-server"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.bowmans.site`)
      kind: Rule
      services:
      - name: argocd-server
        port: 80
  tls:
    secretName: argocd-certificate
